--- a/admin/i18n/de/translations.json
+++ b/admin/i18n/de/translations.json
@@ -5,6 +5,9 @@
     "buttonNotAgain": "nicht wieder anzeigen",
     "button_closeModal": "Abbrechen",
     "button_getUser": "Neuen Benutzer abrufen",
+    "certChained": "Chained Zertifikat",
+    "certPrivate": "Privater Schlüssel",
+    "certPublic": "Öffentliches Zertifikat",
     "connectionInformation": "Verbindungsinformationen für Ihre Hue-Bridge",
     "connectionTitle": "Verbindungseinstellungen für die Hue Bridge",
     "donateInformation": "Neue Funktionen / Features können gerne über Github oder das ioBroker Forum angefragt werden. Wenn dieser Adapter gefällt / nützlich ist, sind Spenden herzlich Willkommen.",
@@ -27,6 +30,7 @@
     "nameInfo": "Geräte-Namen im Objekt-Baum (anstelle der ID) verwenden",
     "onlyForDuplicates": "Geräte-ID nur bei namensgleichen Einträgen für die Eindeutigkeit verwenden",
     "other": "Weitere Einstellungen",
+    "passphrase": "Passwort (nur wenn privater Schlüssel zusätzlich verschlüsselt ist)",
     "port": "Bridge Port",
     "queue": "Queue-Verarbeitung (in Sekunden)",
     "queueInfo": "Zeit für die Verarbeitung der Befehle in der Warteschlange (in Sekunden). Befehle werden in die Warteschlange gestellt und gemeinsam verarbeitet. Dies ermöglicht das Anwenden mehrerer Befehle gleichzeitig (und nicht nacheinander) auf Ihren Geräten.",
@@ -35,6 +39,7 @@
     "sceneInfo": "Nachfolgend kann eingestellt werden, wie die Datenpunkte für Szenen im Objekt-Baum angelegt werden.",
     "sceneNamingRoom": "Format <pre>scenes.<b>&lt;Name-der-Gruppe&gt;</b>.<b>&lt;Name-der-Szene&gt;</b>.name</pre>",
     "sceneNamingScene": "Format <pre>scenes.<b>&lt;Name-der-Szene&gt;</b>.<b>&lt;Name-der-Gruppe&gt;</b>.name</pre>",
+    "secureConnection": "Benutze sichere Verbindung zur Bridge (https)",
     "sync": "Synchronisierungseinstellungen",
     "syncConfig": "Synchronisation der Konfiguration",
     "syncGroups": "Synchronisation der Gruppen",
