--- a/admin/i18n/en/translations.json
+++ b/admin/i18n/en/translations.json
@@ -5,6 +5,9 @@
     "buttonNotAgain": "Don't show again",
     "button_closeModal": "Cancel",
     "button_getUser": "Get new user",
+    "certChained": "Chained Certificate",
+    "certPrivate": "Private Key",
+    "certPublic": "Public Certificate",
     "connectionInformation": "Provide connection information for your Hue Bridge",
     "connectionTitle": "Connection settings for Hue Bridge",
     "donateInformation": "Feel free to suggest new features via Github or ioBroker forum. If you like this adapter, you very welcome to donate.",
@@ -27,6 +30,7 @@
     "nameInfo": "Use Device Name in Object tree (instead of ID)",
     "onlyForDuplicates": "Use the device ID only for unambiguousness in case devices are having the same name",
     "other": "Other Settings",
+    "passphrase": "Password if private key is additionally encrypted",
     "port": "Bridge Port",
     "queue": "Queue processing (in seconds)",
     "queueInfo": "Time for processing commands in the queue (in seconds). Commands are queued and processed together. This allows to apply several commands at once (and not one-by-one) on your devices.",
@@ -35,6 +39,7 @@
     "sceneInfo": "With this option you may choose how objects for scenes are named within the object tree.",
     "sceneNamingRoom": "Format <pre>scenes.<b>&lt;Name-of-Group&gt;</b>.<b>&lt;Name-of-Scene&gt;</b>.name</pre>",
     "sceneNamingScene": "Format <pre>scenes.<b>&lt;Name-of-Scene&gt;</b>.<b>&lt;Name-of-Group&gt;</b>.name</pre>",
+    "secureConnection": "Use secure connection to Bridge (https)",
     "sync": "Synchronisation Settings",
     "syncConfig": "Synchronize Config",
     "syncGroups": "Synchronize Groups",
