--- a/admin/i18n/es/translations.json
+++ b/admin/i18n/es/translations.json
@@ -5,6 +5,9 @@
     "buttonNotAgain": "No volver a mostrar",
     "button_closeModal": "Cancelar",
     "button_getUser": "Obtener nuevo usuario",
+    "certChained": "Certificado encadenado",
+    "certPrivate": "Llave privada",
+    "certPublic": "Certificado publico",
     "connectionInformation": "Proporcionar información de conexión para el Puente Hue",
     "connectionTitle": "Ajustes de conexión para el Puente Hue",
     "donateInformation": "Siéntase libre de sugerir nuevas características a través de Github o ioBroker foro. Si te gusta este adaptador, usted muy bienvenido a donar.",
@@ -27,6 +30,7 @@
     "nameInfo": "El uso de un Nombre de Dispositivo en el árbol de Objetos (en lugar de ID)",
     "onlyForDuplicates": "Utilizar el IDENTIFICADOR de dispositivo único para unambiguousness en caso de que los dispositivos tienen el mismo nombre",
     "other": "Otros Ajustes",
+    "passphrase": "Contraseña si la clave privada está encriptada adicionalmente",
     "port": "Puente Del Puerto",
     "queue": "La cola de procesamiento (en segundos)",
     "queueInfo": "Tiempo para el procesamiento de los comandos en la cola. Los comandos están en la cola y se procesan de forma conjunta. Esto permite aplicar la fuerza serval comandos a la vez (y no uno por uno) en sus dispositivos.",
@@ -35,6 +39,7 @@
     "sceneInfo": "Con esta opción usted puede elegir la forma de los objetos para las escenas son nombrados en el árbol de objetos.",
     "sceneNamingRoom": "Formato <pre>las escenas.<b>&lt;Nombre-de-Grupo&gt;</b>.<b>&lt;Nombre de la Escena&gt;</b>.nombre</pre>",
     "sceneNamingScene": "Formato <pre>las escenas.<b>&lt;Nombre de la Escena&gt;</b>.<b>&lt;Nombre-de-Grupo&gt;</b>.nombre</pre>",
+    "secureConnection": "Use una conexión segura a Bridge (https)",
     "sync": "Ajustes De Sincronización",
     "syncConfig": "Sincronizar Config",
     "syncGroups": "Sincronizar Grupos",
