--- a/admin/i18n/fr/translations.json
+++ b/admin/i18n/fr/translations.json
@@ -5,6 +5,9 @@
     "buttonNotAgain": "Ne pas afficher de nouveau",
     "button_closeModal": "Annuler",
     "button_getUser": "Obtenir de nouveaux utilisateurs",
+    "certChained": "Certificat chaîné",
+    "certPrivate": "Clé privée",
+    "certPublic": "Certificat public",
     "connectionInformation": "Fournir les informations de connexion pour votre Teinte Pont",
     "connectionTitle": "Paramètres de connexion pour la Teinte Pont",
     "donateInformation": "N'hésitez pas à suggérer de nouvelles fonctionnalités via Github ou ioBroker forum. Si vous aimez cet adaptateur, vous les bienvenus pour faire un don.",
@@ -27,6 +30,7 @@
     "nameInfo": "Utilisation Nom de l'Appareil dans l'arborescence des Objets (au lieu de l'ID)",
     "onlyForDuplicates": "Utiliser l'ID de l'appareil uniquement pour unambiguousness dans le cas où les appareils ont le même nom",
     "other": "D'Autres Paramètres",
+    "passphrase": "Mot de passe si la clé privée est cryptée",
     "port": "Port De Pont",
     "queue": "File d'attente de traitement (en secondes)",
     "queueInfo": "Le temps de traitement des commandes dans la file d'attente. Les commandes sont en attente et traitées ensemble. Cela permet d'appliquer serval commandes à la fois (et non pas un par un) sur vos appareils.",
@@ -35,6 +39,7 @@
     "sceneInfo": "Avec cette option, vous pouvez choisir la manière dont les objets pour les scènes sont nommés au sein de l'arborescence de l'objet.",
     "sceneNamingRoom": "Format <pre>les scènes.<b>&lt;Nom-du-Groupe&gt;</b>.<b>&lt;Nom de Scène&gt;</b>.nom</pre>",
     "sceneNamingScene": "Format <pre>les scènes.<b>&lt;Nom de Scène&gt;</b>.<b>&lt;Nom-du-Groupe&gt;</b>.nom</pre>",
+    "secureConnection": "Utiliser une connexion sécurisée à Bridge (https)",
     "sync": "Paramètres De Synchronisation",
     "syncConfig": "Synchroniser Config",
     "syncGroups": "Synchroniser Les Groupes",
