--- a/admin/i18n/it/translations.json
+++ b/admin/i18n/it/translations.json
@@ -5,6 +5,9 @@
     "buttonNotAgain": "Non mostrare più",
     "button_closeModal": "Annulla",
     "button_getUser": "Ottenere nuovo utente",
+    "certChained": "Certificato incatenato",
+    "certPrivate": "Chiave privata",
+    "certPublic": "Certificato pubblico",
     "connectionInformation": "Fornire le informazioni di connessione per il Bridge Hue",
     "connectionTitle": "Impostazioni di connessione per Tonalità Ponte",
     "donateInformation": "Sentitevi liberi di suggerire nuove funzionalità tramite Github o ioBroker forum. Se ti piace questo adattatore, è molto benvenuto a donare.",
@@ -27,6 +30,7 @@
     "nameInfo": "Utilizzare il Nome del Dispositivo in Oggetto albero (invece di ID)",
     "onlyForDuplicates": "Utilizzare il dispositivo solo ID per univocità nel caso di dispositivi con lo stesso nome",
     "other": "Altre Impostazioni",
+    "passphrase": "Password se la chiave privata è ulteriormente crittografata",
     "port": "Ponte Di Porta",
     "queue": "La coda di elaborazione (in secondi)",
     "queueInfo": "Il tempo per l'elaborazione dei comandi in coda. I comandi sono in coda e trattati insieme. Questo permette di applicare serval comandi in una sola volta (e non uno) sui vostri dispositivi.",
@@ -35,6 +39,7 @@
     "sceneInfo": "Con questa opzione si può scegliere come oggetti per scene sono indicati all'interno dell'albero di oggetti.",
     "sceneNamingRoom": "Formato <pre>le scene.<b>&lt;Nome del Gruppo&gt;</b>.<b>&lt;Nome-di-Scena&gt;</b>.nome</pre>",
     "sceneNamingScene": "Formato <pre>le scene.<b>&lt;Nome-di-Scena&gt;</b>.<b>&lt;Nome del Gruppo&gt;</b>.nome</pre>",
+    "secureConnection": "Usa connessione sicura a Bridge (https)",
     "sync": "Impostazioni Di Sincronizzazione",
     "syncConfig": "Sincronizzare Config",
     "syncGroups": "Sincronizzare I Gruppi",
