--- a/admin/i18n/nl/translations.json
+++ b/admin/i18n/nl/translations.json
@@ -5,6 +5,9 @@
     "buttonNotAgain": "Don ' t show again",
     "button_closeModal": "Annuleren",
     "button_getUser": "Nieuwe gebruiker",
+    "certChained": "Geketend certificaat",
+    "certPrivate": "Prive sleutel",
+    "certPublic": "Openbaar certificaat",
     "connectionInformation": "Maak de verbinding informatie voor uw Hue Bridge",
     "connectionTitle": "Verbindingsinstellingen voor Hue Bridge",
     "donateInformation": "Voel je vrij om te suggereren nieuwe functies via Github of ioBroker forum. Als je van deze adapter, die je erg welkom om te doneren.",
@@ -27,6 +30,7 @@
     "nameInfo": "Gebruik de Naam van het Apparaat in het objectscherm (in plaats van ID)",
     "onlyForDuplicates": "Gebruik de apparaat-ID alleen voor unambiguousness in geval apparaten met dezelfde naam",
     "other": "Andere Instellingen",
+    "passphrase": "Wachtwoord als de privésleutel bovendien is gecodeerd",
     "port": "Brug-Poort",
     "queue": "Rij te verwerken (in seconden)",
     "queueInfo": "Tijd voor de verwerking van opdrachten in de wachtrij. Opdrachten in een wachtrij worden geplaatst en verwerkt samen. Dit kunt toepassen serval commando ' s in een keer (en niet één-op-één) toe aan uw apparatuur.",
@@ -35,6 +39,7 @@
     "sceneInfo": "Met deze optie kunt u kiezen hoe objecten scènes zijn genoemd in het objectscherm.",
     "sceneNamingRoom": "Indeling <pre>scènes.<b>&lt;Naam van de Groep&gt;</b>.<b>&lt;Naam-van-Scene&gt;</b>.naam</pre>",
     "sceneNamingScene": "Indeling <pre>scènes.<b>&lt;Naam-van-Scene&gt;</b>.<b>&lt;Naam van de Groep&gt;</b>.naam</pre>",
+    "secureConnection": "Gebruik beveiligde verbinding met Bridge (https)",
     "sync": "Synchronisatie-Instellingen",
     "syncConfig": "Synchroniseren Config",
     "syncGroups": "Groepen Synchroniseren",
