--- a/admin/i18n/pl/translations.json
+++ b/admin/i18n/pl/translations.json
@@ -5,6 +5,9 @@
     "buttonNotAgain": "Nie pokazuj więcej ",
     "button_closeModal": "Anuluj",
     "button_getUser": "Zdobądź nowych użytkowników",
+    "certChained": "Chained Certificate",
+    "certPrivate": "Prywatny klucz",
+    "certPublic": "Certyfikat publiczny",
     "connectionInformation": "Podać informacje na temat podłączania do sieci Hue bridge",
     "connectionTitle": "Ustawienia połączenia Hue bridge",
     "donateInformation": "Nie wahaj się zaproponować nowe funkcje poprzez GitHub lub forum ioBroker. Jeśli podoba ci się ten zasilacz, możesz podarować.",
@@ -27,6 +30,7 @@
     "nameInfo": "Używać nazwy urządzenia w drzewie obiektów (a nie ID)",
     "onlyForDuplicates": "Używamy identyfikator urządzenia tylko dla jednoznaczności w przypadku urządzenia o tej samej nazwie",
     "other": "Inne Opcje",
+    "passphrase": "Hasło, jeśli klucz prywatny jest dodatkowo szyfrowany",
     "port": "Most Port",
     "queue": "Przetwarzanie kolejki (w sekundach)",
     "queueInfo": "Czas na przetwarzanie poleceń w kolejce. Polecenia są umieszczane w kolejce i przetwarzane razem. To pozwala na stosowanie polecenia сервал raz (a nie jeden) na swoich urządzeniach.",
@@ -35,6 +39,7 @@
     "sceneInfo": "Za pomocą tej opcji można wybrać, jak obiekty sceny nazwy w drzewie obiektów.",
     "sceneNamingRoom": "Format znacznika <pre>scen.<b>&lt;nazwa-z-grupy&GT;</b>.<b>&lt;nazwa-z-scena&GT;</b>.imię i</pre>",
     "sceneNamingScene": "Format znacznika <pre>scen.<b>&lt;nazwa-z-scena&GT;</b>.<b>&lt;nazwa-z-grupy&GT;</b>.imię i</pre>",
+    "secureConnection": "Użyj bezpiecznego połączenia z mostem (https)",
     "sync": "Ustawienia Synchronizacji ",
     "syncConfig": "Synchronizować Konfigur",
     "syncGroups": "Synchronizacja Grup",
