--- a/admin/i18n/pt/translations.json
+++ b/admin/i18n/pt/translations.json
@@ -5,6 +5,9 @@
     "buttonNotAgain": "Não mostrar novamente",
     "button_closeModal": "Cancelar",
     "button_getUser": "Obter novo usuário",
+    "certChained": "Certificado encadeado",
+    "certPrivate": "Chave privada",
+    "certPublic": "Certificado público",
     "connectionInformation": "Forneça informações de conexão para o seu Tonalidade Ponte",
     "connectionTitle": "Configurações de conexão de Tonalidade Ponte",
     "donateInformation": "Sinta-se livre para sugerir novos recursos via Github ou ioBroker fórum. Se você gosta deste adaptador, você é muito bem-vindo para doar.",
@@ -27,6 +30,7 @@
     "nameInfo": "Usar o Nome de Dispositivo na árvore do Objeto (em vez do ID)",
     "onlyForDuplicates": "Use o ID do dispositivo apenas para unambiguousness no caso de dispositivos com o mesmo nome",
     "other": "Outras Configurações",
+    "passphrase": "Senha se a chave privada for criptografada adicionalmente",
     "port": "Ponte Do Porto",
     "queue": "A fila de processamento (em segundos)",
     "queueInfo": "O tempo para o processamento de comandos na fila. Os comandos são colocados em fila e processados em conjunto. Isto permite aplicar serval comandos de uma vez (e não de um em um) em todos os seus dispositivos.",
@@ -35,6 +39,7 @@
     "sceneInfo": "Com esta opção você pode escolher a forma como os objetos para as cenas são nomeados dentro do objeto árvore.",
     "sceneNamingRoom": "Formato <pre>cenas.<b>&lt;Nome-do-Grupo - &gt;</b>.<b>&lt;Nome-de-Cena&gt;</b>.nome</pre>",
     "sceneNamingScene": "Formato <pre>cenas.<b>&lt;Nome-de-Cena&gt;</b>.<b>&lt;Nome-do-Grupo - &gt;</b>.nome</pre>",
+    "secureConnection": "Usar conexão segura com o Bridge (https)",
     "sync": "Definições De Sincronização",
     "syncConfig": "Sincronizar Config",
     "syncGroups": "Sincronizar Grupos",
