--- a/admin/i18n/ru/translations.json
+++ b/admin/i18n/ru/translations.json
@@ -5,6 +5,9 @@
     "buttonNotAgain": "Больше не показывать ",
     "button_closeModal": "Отменить",
     "button_getUser": "Получите новых пользователей",
+    "certChained": "Цепной сертификат",
+    "certPrivate": "Закрытый ключ",
+    "certPublic": "Публичный сертификат",
     "connectionInformation": "Предоставить информацию о подключении к вашей Hue мост",
     "connectionTitle": "Настройки подключения для Hue мост",
     "donateInformation": "Не стесняйтесь предложить новые функции через GitHub или форуме ioBroker. Если вам нравится этот адаптер, вы можете пожертвовать.",
@@ -27,6 +30,7 @@
     "nameInfo": "Использовать имя устройства в дереве объектов (а не ID)",
     "onlyForDuplicates": "Используем идентификатор устройства только для однозначности в случае устройства с тем же именем",
     "other": "Другие Параметры",
+    "passphrase": "Пароль, если закрытый ключ дополнительно зашифрован",
     "port": "Мост Порт",
     "queue": "Обработка очереди (в секундах)",
     "queueInfo": "Время на обработку команд в очереди. Команды помещаются в очередь и обрабатываются вместе. Это позволяет применять команды сервал сразу (и не по одному) на ваших устройствах.",
@@ -35,6 +39,7 @@
     "sceneInfo": "С помощью этой опции вы можете выбрать, как объекты для сцены имени в дереве объектов.",
     "sceneNamingRoom": "Формат тега <pre>сцен.<б>&lt;имя-из-группы&ГТ;</б>.<б>&lt;имя-из-сцена&ГТ;</б>.имя и</pre>",
     "sceneNamingScene": "Формат тега <pre>сцен.<б>&lt;имя-из-сцена&ГТ;</б>.<б>&lt;имя-из-группы&ГТ;</б>.имя и</pre>",
+    "secureConnection": "Используйте безопасное соединение с мостом (https)",
     "sync": "Настройки Синхронизации ",
     "syncConfig": "Синхронизировать Конфиг",
     "syncGroups": "Синхронизация Групп",
