--- a/admin/i18n/zh-cn/translations.json
+++ b/admin/i18n/zh-cn/translations.json
@@ -5,6 +5,9 @@
     "buttonNotAgain": "不要再显示",
     "button_closeModal": "取消",
     "button_getUser": "获得新的用户",
+    "certChained": "连锁证书",
+    "certPrivate": "私钥",
+    "certPublic": "公开证书",
     "connectionInformation": "提供连接信息顺桥",
     "connectionTitle": "连接设置顺桥",
     "donateInformation": "随时提出新的功能，通过审查或ioBroker论坛。 如果你喜欢这个转接器，你非常受欢迎的捐赠。",
@@ -27,6 +30,7 @@
     "nameInfo": "使用的设备名称中的目标树(而不是ID)",
     "onlyForDuplicates": "使用的设备ID只unambiguousness在的情况下设备的具有相同的名称",
     "other": "其他的设置",
+    "passphrase": "密码（如果还加密了私钥）",
     "port": "桥口",
     "queue": "的队列中处理(秒)",
     "queueInfo": "处理时间命令在队列中。 命令是排队，并处理在一起。 这将允许申请薮命令，一旦(而不是逐一)在您的设备。",
@@ -35,6 +39,7 @@
     "sceneInfo": "这个选择你可以选择对象的场景名内对象的树。",
     "sceneNamingRoom": "格式<预>色扩展。0.场景。<b>和名称的组gt;</b>.<b>和名称的场景-gt;</b>.名</预>",
     "sceneNamingScene": "格式<预>色扩展。0.场景。<b>和名称的场景-gt;</b>.<b>和名称的组gt;</b>.名</预>",
+    "secureConnection": "使用安全连接到网桥（https）",
     "sync": "同步设置",
     "syncConfig": "同步配置",
     "syncGroups": "同步组",
