--- a/admin/i18n/ru/translations.json
+++ b/admin/i18n/ru/translations.json
@@ -10,6 +10,7 @@
     "certPublic": "Публичный сертификат",
     "connectionInformation": "Предоставить информацию о подключении к вашей Hue мост",
     "connectionTitle": "Настройки подключения для Hue мост",
+    "ctToXY": "Используйте <pre> XY </ pre> вместо <pre> ct </ pre> (только для устройств не от Philips)",
     "donateInformation": "Не стесняйтесь предложить новые функции через GitHub или форуме ioBroker. Если вам нравится этот адаптер, вы можете пожертвовать.",
     "donateTitle": "Поддержка развития Хюэ-расширенный адаптер!",
     "garbageCollector": "Удаление устаревших устройств от объектов",
