--- a/admin/i18n/ru/translations.json
+++ b/admin/i18n/ru/translations.json
@@ -1,4 +1,6 @@
 {
+    "briWhenNotReachable": "Установить яркость до 0, когда устройство выключено",
+    "briWhenNotReachableInfo": "Эта опция устанавливает тега <pre>яркость и</pre> / <до>уровня</Pre> это к 0, когда устройства недоступен (теги<pre>можно добраться и</pre> Ауф <Pre>это ложь и</pre>).",
     "briWhenOff": "Установить яркость до 0, когда устройство выключено",
     "briWhenOffInfo": "Эта опция устанавливает тега <pre>яркость и</pre> / <до>уровня</Pre> это к 0, когда устройство выключено (теги<Pre>на</pre> в Ауф <Pre>это ложь и</pre>).",
     "buttonDismiss": "Уволить",
